--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -78,6 +78,14 @@
           <%= form.password_field :password_confirmation, :size => "50" %>
         </td>
       </tr>
+
+      <tr height="40">
+        <td align="center">
+          <button type="button" class="btn btn-outline-secondary rounded-pill">
+            <%= form.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
+          </button>
+        </td>
+      </tr>
     </table>
 
     <% if !guest_user? %>
